<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tvSplashTitle"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:fontFamily="@font/letra_formula"
        android:gravity="center"
        android:text="@string/SplashTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/tvSplashTitle1"
        android:layout_width="285dp"
        android:layout_height="94dp"
        android:fontFamily="@font/letra_formula"
        android:gravity="center"
        android:text="@string/SplashTitle1"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:fontFamily="@font/letra_formula"
        android:gravity="center"
        android:text="@string/autor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:fontFamily="@font/letra_formula"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.924" />
</androidx.constraintlayout.widget.ConstraintLayout>